--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,6 @@ plugins {
     id 'org.jetbrains.kotlin.android'
     id("kotlin-kapt")
     id("dagger.hilt.android.plugin")
-    id("androidx.navigation.safeargs")
     id("kotlin-parcelize")
     id 'org.jetbrains.kotlin.plugin.serialization'
 
@@ -47,11 +46,10 @@ dependencies {
     implementation 'com.google.android.material:material:1.6.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.4.2'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.4.2'
-    implementation 'androidx.navigation:navigation-fragment:2.4.2'
+
 
     implementation 'com.squareup.okhttp3:okhttp:4.9.0'
+    implementation 'com.google.android.gms:play-services-ads:20.5.0'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
@@ -75,16 +73,6 @@ dependencies {
     kapt("com.google.dagger:hilt-android-compiler:2.42")
 
     implementation 'com.squareup.picasso:picasso:2.8'
-    implementation 'com.facebook.fresco:fresco:2.3.0'
-
-    def ktor_version = "1.6.3"
-    implementation "io.ktor:ktor-client-core:$ktor_version"
-    implementation "io.ktor:ktor-client-android:$ktor_version"
-    implementation "io.ktor:ktor-client-serialization:$ktor_version"
-    implementation "io.ktor:ktor-client-logging:$ktor_version"
-    implementation "ch.qos.logback:logback-classic:1.2.3"
-
-    implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.0"
 
     implementation 'androidx.room:room-runtime:2.3.0'
     implementation "androidx.room:room-ktx:2.3.0"
